k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myfirstgitapp
  namespace: myfirstgitapp
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-http01
spec:
  tls:
    - hosts:
        - saint-viatre.hd.free.fr
      secretName: myfirstgitapp-tls
  rules:
    - host: saint-viatre.hd.free.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
