k8s/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - saint-viatre.hd.free.fr
      secretName: saint-viatre-tls
  rules:
    - host: saint-viatre.hd.free.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-first-git-app-service
                port:
                  number: 80
